maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:66: error: not found: value directionInt
    directionInt = iMin(cases)
    ^JediEscaper:68: error: not found: value directionInt
    directionInt match{
    ^